<resources>
    <string name="app_name">PortalView</string>
    <string name="action_settings">Settings</string>
    <string name="username">arcgis online username</string>
    <string name="password">arcgis online password</string>
    <string name="login">Log in</string>
    <string name="reset">Reset</string>
    <string name="title_activity_portal_view2">PortalView2</string>
    <string name="title_activity_portal_view">PortalView</string>
    <string name="logout">Log out</string>
    <string name="copyright">(c) 2016 esri support quartz beta test</string>
    <string name="title_activity_navigator">Navigator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonymous">Anonymous user</string>
    <string name="login_icon">icon image</string>
    <string name="login_log">login log</string>
    <string name="title_activity_tabbed_holder">TabbedHolderActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_app_launcher">AppLauncherActivity</string>
    <string name="sign_in_button">Sign in</string>
    <string name="app_content">Sign in to arcgis online or your portal\n
    </string>
    <string name="image_description">launcher_logo</string>
    <string name="esri">esri</string>
    <string name="sign_in_to_arcgis_online_or_your_portal">Sign in to arcgis online or your portal</string>
    <string name="arcgis.com" />
    <string name="arcgis">www.arcgis.com</string>
    <string name="portal">Your portal (<![CDATA[eg. http://<host>:<port>/arcgis]]>)</string>
    <string name="portal_example"></string>
    <string name="portal_item_thumbnail">portal item thumbnail</string>
    <string name="num_views">num_views</string>
    <string name="num_rating">num_ratings</string>
    <string name="date_modified">date_modified</string>
    <string name="search_icon">Search for portal items</string>
    <string name="search_hint">Search for places</string>
    <string name="base_map">Change Basemap</string>
    <string name="show_portal">Show Action Buttons</string>
    <string name="layers">Show Layers</string>
    <string name="nav_results">Show Navigation Results</string>
    <string name="from_routing">From:</string>
    <string name="to_routing">To:</string>
    <string name="turn_by_turn">Turn by Turn Directions</string>
    <string name="time_of_arrival">Time of Arrival</string>
    <string name="total_distance">Total Distance</string>
    <string name="route_image_desc">route turn description</string>
    <string name="switch_text">Voice Guidance</string>
    <string name="anonymous_access">Use without signing in to a portal</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="feature_found">feature_found</string>
    <string name="direction_option">direction option</string>
    <string name="title_activity_geocode">GeocodeActivity</string>
    <string name="mph">speed</string>
    <string name="arrival">ETA</string>
    <string name="travel_time">travel time</string>
    <string name="rememeber_me">Remember me</string>
</resources>
