<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:textAlignment="gravity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:padding="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imagelogo"
        android:src="@mipmap/arcgisglobe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portalusername"
        android:hint="@string/username"
        android:layout_above="@+id/portalpassword"
        android:layout_alignStart="@+id/portalpassword"
        android:layout_alignEnd="@+id/portalpassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginbutton"
        android:layout_alignTop="@+id/resetbutton"
        android:layout_alignEnd="@+id/portalpassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetbutton"
        android:layout_marginBottom="94dp"
        android:layout_above="@+id/copyright"
        android:layout_alignStart="@+id/portalpassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/portalpassword"
        android:hint="@string/password"
        android:layout_above="@+id/loginbutton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/esri"
        android:layout_below="@+id/imagelogo"
        android:layout_alignStart="@+id/imagelogo"
        android:src="@mipmap/esripower"
        android:layout_toStartOf="@+id/loginbutton"
        android:layout_alignEnd="@+id/imagelogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/resetbutton"
        android:layout_marginBottom="27dp"
        android:layout_alignEnd="@+id/loginbutton"
        android:textAlignment="center" />

</RelativeLayout>
