<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="test.support.esri.com.portalitemview.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/darker_gray">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imagelogo"
        android:src="@mipmap/arcgisglobe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/portalusername"
        android:hint="@string/username"
        android:layout_above="@+id/portalpassword"
        android:layout_alignStart="@+id/portalpassword"
        android:layout_alignEnd="@+id/portalpassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginbutton"
        android:layout_alignTop="@+id/resetbutton"
        android:layout_alignEnd="@+id/portalpassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetbutton"
        android:layout_marginBottom="94dp"
        android:layout_above="@+id/copyright"
        android:layout_alignStart="@+id/portalpassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/portalpassword"
        android:hint="@string/password"
        android:layout_above="@+id/loginbutton"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/esri"
        android:layout_below="@+id/imagelogo"
        android:layout_alignStart="@+id/imagelogo"
        android:src="@mipmap/esripower"
        android:layout_toStartOf="@+id/loginbutton"
        android:layout_alignEnd="@+id/imagelogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/resetbutton"
        android:layout_marginBottom="27dp"
        android:layout_alignEnd="@+id/loginbutton"
        android:textAlignment="center" />

</RelativeLayout>


    <!-- android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"-->