<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:textAlignment="gravity"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@android:color/darker_gray"
    android:columnOrderPreserved="false"
    android:columnCount="@integer/num_of_cols"
    android:rowCount="@integer/num_rows"
    android:orientation="vertical"
    android:weightSum="1">


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:outlineProvider="paddedBounds"
        android:id="@+id/radioGroup">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portal"
        android:id="@+id/radio_portal"
        android:layout_above="@+id/input_layout_password"
        android:layout_alignParentStart="true"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arcgis"
        android:id="@+id/radio_arcgis"
        android:layout_alignTop="@+id/radio_portal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/portal_url"
            android:hint="eg. http://&lt;host>:&lt;port>/arcgis"
            android:textAlignment="center" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignTop="@+id/radioGroup">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:touchscreenBlocksFocus="false"
            android:textAlignment="center">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/portal_username"
                android:layout_above="@+id/portal_password"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_row="0"
                android:layout_column="0"
                android:textAlignment="center"
                android:textColor="@color/abc_primary_text_material_dark"
                android:hint="@string/username" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_above="@+id/loginbutton"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/portal_password"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/abc_primary_text_disable_only_material_dark"
                android:textAlignment="center"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginbutton"
            android:alpha="0.2"
            android:layout_above="@+id/resetbutton"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetbutton"
            android:alpha="0.2"
            android:layout_above="@+id/copyright"
            android:layout_alignParentStart="true" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/resetbutton"
        android:layout_alignEnd="@+id/loginbutton"
        android:textAlignment="center"
        android:layout_marginTop="90dp"
        android:textColor="@color/abc_primary_text_material_dark" />

</RelativeLayout>
